# CourseWork

./: README.md
445f22_Shengyuan/06.parallelLoop-equalChunks/: parallelLoopEqualChunks.c
445f22_Shengyuan/1-sequentialLoop/: loopRepetitions.cpp
445f22_Shengyuan/2-parallelLoops/2.chunksOfOne/: loopChunksOfOne.cpp
445f22_Shengyuan/2-parallelLoops/utils/: getCommandLine.c
445f22_Shengyuan/445f22/demo-random2d-ShengyuanWang/: 2d_matrix_init  2d_matrix_init.cpp  Makefile  README.md  getCommandLine.cpp  getCommandLine.hpp  ising_2d_initial.txt  ising_utils.cpp  ising_utils.hpp  plotFile.cpp  plotFile.hpp  test_arguments.sh
445f22_Shengyuan/445f22/hw0-2-practice-ShengyuanWang/: Makefile  README.md  hello.c
445f22_Shengyuan/445f22/hw0-2-practice-ShengyuanWang/utils/: getCommandLine.c  getCommandLine.h
445f22_Shengyuan/445f22/hw1-countsort-ShengyuanWang/: Makefile  README.md  REPORT.md  countSort_omp.c  countSort_seq  countSort_seq.c  getopt  getopt.c
445f22_Shengyuan/445f22/hw1-redux-countsort-ShengyuanWang/: Makefile  README.md  countSort_omp  countSort_omp.c  countSort_seq  countSort_seq.c  profile_seq.sh  profile_seq.tsv  run_strong_tests.sh  run_weak_tests.sh  strong_generate.tsv  strong_sort1.tsv  weak_generate.tsv  weak_sort1.tsv
445f22_Shengyuan/445f22/hw1-redux-countsort-ShengyuanWang/utils/: getCommandLine.c  getCommandLine.h
445f22_Shengyuan/445f22/hw2-gameoflife-mpi-ShengyuanWang/: Makefile  README.md  life.mpi  life_mpi.c  life_seq.c  out_2.txt  run_strong_tests.sh  run_weak_tests.sh  seq_time.h  weak_test_whole.tsv
445f22_Shengyuan/445f22/hw3-game-of-life-openacc-ShengyuanWang/: README.md  profile.out
445f22_Shengyuan/445f22/hw3-game-of-life-openacc-ShengyuanWang/1-sequential/: Makefile  gmon.out  gol_main.c  gol_seq  gol_seq.c  gol_seq_prof  profile.out
445f22_Shengyuan/445f22/hw3-game-of-life-openacc-ShengyuanWang/2-openMP/: Makefile  gol_main.c  gol_omp  gol_omp.c
445f22_Shengyuan/445f22/hw3-game-of-life-openacc-ShengyuanWang/3-multicore/: Makefile  gol_main.c  gol_mc.c
445f22_Shengyuan/445f22/hw3-game-of-life-openacc-ShengyuanWang/4-openacc-gpu/: Makefile  gol_acc.c  gol_main.c
445f22_Shengyuan/445f22/hw3-game-of-life-openacc-ShengyuanWang/utils/: getCommandLine.c  getCommandLine.h
445f22_Shengyuan/445f22/openacc-basics-ShengyuanWang/: README.md
445f22_Shengyuan/445f22/parallel-floyd-warshall/openmp/: getCommandLine.c
445f22_Shengyuan/445f22/practice-cuda-ShengyuanWang/: README.md
445f22_Shengyuan/445f22/practice-cuda-ShengyuanWang/1-basics/: Makefile  device_info.cu  helper_cuda.h  simpleBlockPrintf.cu
445f22_Shengyuan/445f22/practice-cuda-ShengyuanWang/2-vectorAdd/: vectorAdd.cu
445f22_Shengyuan/445f22/practice-cuda-ShengyuanWang/3-UMVectorAdd/: helper_add.h  vectorAdd.cu
445f22_Shengyuan/445f22/practice-mpi-examples-ShengyuanWang/: README.md
445f22_Shengyuan/445f22/practice-openacc-ShengyuanWang/: README.md
445f22_Shengyuan/445f22/practice-patternlets-ShengyuanWang/: README.md
445f22_Shengyuan/445f22/practice-random-ShengyuanWang/: README.md
445f22_Shengyuan/445f22/practice-trapezoid-scalability-ShengyuanWang/: Makefile  README.md  run_strong_tests.sh  run_weak_tests.sh  trap-omp  trap-omp.c  trap-seq  trap-seq.c  trap_strong_out.tsv  trap_weak_out.tsv
445f22_Shengyuan/445f22/project-team2-shengyuan-kaiyang/: README.md  data_report.sh
445f22_Shengyuan/Activities/: Copy of _trap_ speedup sheet template.xlsx
445f22_Shengyuan/HW1/: F22 COMP 445 - HW1 Comments.docx  Shengyuan Wang speedup sheet.xlsx
445f22_Shengyuan/HW2/: HW2  COMP 445 F22 Comments.docx  Shengyuan Wang HW2 speedup sheet.xlsx
445f22_Shengyuan/HW3/: HW3 COMP 445 S22 Rubric.docx  HW3_DataReport.xlsx
445f22_Shengyuan/Project/: Floyd-Warshall speedup sheet.xlsx  Project_DataReport.xlsx
445f22_Shengyuan/demo-patternlets-random-ShengyuanWang/: README.md
445f22_Shengyuan/demo-patternlets-random-ShengyuanWang/1-sequentialLoop/: getCommandLine.c
CLA/Homeworks/HW1/: .Rhistory  HW1_2023.Rmd  HW1_2023.html
CLA/Homeworks/HW2/: .Rhistory  HW2_2023.Rmd  HW2_2023.html
CLA/Homeworks/HW3/group-part/: mini_project.Rmd  mini_project.html
CLA/Homeworks/HW4/: .Rhistory  HW4_S2023.Rmd  HW4_S2023.html
CLA/Homeworks/HW5/: HW5_2023.Rmd  HW5_2023.html
CLA/Homeworks/HW6/: .Rhistory  cerealproblem.Rmd  cerealproblem.html
CLA/Homeworks/HW7/: HW7_2023.Rmd  HW7_2023.html
CLA/Homeworks/HW8/: HW8.Rmd  HW8.html
CLA/Homeworks/HW9/: .Rhistory  HW9.Rmd  HW9.html
CLA/Rmarkdown/: .Rhistory  ImagesIntro.Rmd  ImagesIntro.tex
CSProject/Vue/day3/: 01过滤器的基本使用.html  02私有过滤器和全局过滤器.html  03watch侦听器.html  04对象格式的侦听器.html  05深度监听.html
CSProject/Vue/品牌列表案例/: 品牌列表案例.html
Kattis/: autori.py  babylonian.py  dasblinkenlights.py  doublepassword.py  keyboard.py  landscape.py  mixedfractions.py  peg.py  ratingproblems.py  relocation.py  safehouses.py
Kattis/icpc/: A.py  H.py  L.py  M.py  problem c.py  problemD.py
Kattis/practice/: 3.py
SSM/Spring/: [01]初识Spring.md  [02]SpringFramework系统架构.md  [03]核心概念.md  [04]IoC入门案例.md
comp465/code/CoordinateFrame-Example/: CMakeLists.txt  README.md
comp465/code/CoordinateFrame-Example/cmake/: AutoBuild.cmake  AutoBuildGLEW.cmake  AutoBuildOpenGL.cmake
comp465/code/CoordinateFrame-Example/cmake/Modules/: FindAssimp.cmake
comp465/code/CoordinateFrame-Example/src/: ExampleApp.cpp  ExampleApp.h  main.cpp
day0317/: 1.创建数据.py  1.初识BootStrap.html  3.珊格.html  4.blog.html
djangoProject/: manage.py
djangoProject/app01/: models.py  views.py
djangoProject/app01/migrations/: 0001_initial.py  0002_department_role.py  0003_auto_20230202_2358.py
djangoProject/app01/templates/: user_add.html
djangoProject/djangoProject/: settings.py  urls.py  wsgi.py
gx/mysite/app01/: views.py
gx/mysite/mysite/: asgi.py  settings.py  urls.py
pythonProject/: schedule.py
pythonProject1/: dataClean.ipynb  test.py
pythonProject1/data/: Cata.csv  Mono.csv
stat155/: practice5_solutions.html  practice6_solutions.html  practice7_solutions.html  practice8_solutions.html  practice9_solutions.html
tools/: convert.py  links.txt  store.txt
(+112 files in other folders)
